3613
and another repro:
```scala

scala> def compare[T](x: Ordered[T], y: Ordered[T]) = error("")
compare: [T](x: Ordered[T],y: Ordered[T])Nothing

scala> def mkEx: Ordered[_] = error("")                        
mkEx: Ordered[_]

scala> compare(mkEx, mkEx)                                     
<console>:8: error: math is not an enclosing class
       compare(mkEx, mkEx)
               ^
<console>:8: error: math is not an enclosing class
       compare(mkEx, mkEx)
```
